# simple-proxy

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  README.zh-CN.md  deny.toml  test.rest
docs/: proxy-http.md
examples/: Makefile  server.rs  test.rest
fixtures/: app.yml  sample.yaml  sample.yml
fixtures/certs/: api.acme.com.crt  api.acme.com.key  ca.crt  ca.key  readme.txt  wildcard.acme.com.crt  wildcard.acme.com.key
specs/: 00-example-server.md  000-example-server.md  002-tls-cert.md  003-update-config.md  01-proxy-config.md
src/: lib.rs  main.rs  utils.rs
src/conf/: mod.rs  raw.rs  resolved.rs
src/config/: raw.rs  resolved.rs
src/proxy/: health.rs  mod.rs  route.rs  simple_proxy.rs
