[package]
name = "template"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
rand = "0.8.0"
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
